<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright © 2015 The Gravitee team (http://gravitee.io)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.gravitee</groupId>
        <artifactId>gravitee-parent</artifactId>
        <version>22.0.19</version>
    </parent>

    <groupId>io.gravitee.cockpit</groupId>
    <artifactId>gravitee-cockpit-connectors</artifactId>
    <version>5.0.0-replace-adhoc-command-by-exchange-framework-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Gravitee.io - Cockpit - Connectors</name>

    <modules>
        <module>gravitee-cockpit-connectors-core</module>
        <module>gravitee-cockpit-connectors-ws</module>
    </modules>

    <properties>
        <gravitee-bom.version>7.0.13</gravitee-bom.version>
        <gravitee-node.version>5.10.0</gravitee-node.version>
        <gravitee-plugin.version>3.1.0</gravitee-plugin.version>
        <gravitee-alert-api.version>2.0.0</gravitee-alert-api.version>
        <gravitee-cockpit-api.version>3.0.0</gravitee-cockpit-api.version>
        <gravitee-exchange.version>1.0.1</gravitee-exchange.version>

        <jdk.version>17</jdk.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Import bom to properly inherit all dependencies -->
            <dependency>
                <groupId>io.gravitee</groupId>
                <artifactId>gravitee-bom</artifactId>
                <version>${gravitee-bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <!-- Self import modules -->
            <dependency>
                <groupId>io.gravitee.cockpit</groupId>
                <artifactId>gravitee-cockpit-connectors-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Gravitee.io -->
            <dependency>
                <groupId>io.gravitee.cockpit</groupId>
                <artifactId>gravitee-cockpit-api</artifactId>
                <version>${gravitee-cockpit-api.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.gravitee.alert</groupId>
                <artifactId>gravitee-alert-api</artifactId>
                <version>${gravitee-alert-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.plugin</groupId>
                <artifactId>gravitee-plugin</artifactId>
                <version>${gravitee-plugin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node</artifactId>
                <version>${gravitee-node.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.gravitee.exchange</groupId>
                <artifactId>gravitee-exchange-api</artifactId>
                <version>${gravitee-exchange.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.exchange</groupId>
                <artifactId>gravitee-exchange-connector-core</artifactId>
                <version>${gravitee-exchange.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.exchange</groupId>
                <artifactId>gravitee-exchange-connector-websocket</artifactId>
                <version>${gravitee-exchange.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>

        <!-- Reactive dependencies -->
        <dependency>
            <groupId>io.reactivex.rxjava3</groupId>
            <artifactId>rxjava</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
        </dependency>

        <!-- Dev dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.hubspot.maven.plugins</groupId>
                <artifactId>prettier-maven-plugin</artifactId>
                <version>0.22</version>
                <configuration>
                    <nodeVersion>16.16.0</nodeVersion>
                    <prettierJavaVersion>1.6.1</prettierJavaVersion>
                    <skip>${skip.validation}</skip>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
